# data_copilot

./: .dockerignore  .gitignore  MANIFEST.in  Makefile  README.rst  SECURITY.md  alembic.ini  configure.py  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements_dev.txt  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md  bug_template.yml  config.yml  improvement_template.md  improvement_template.yml
.github/scripts/: release.py
.github/workflows/: pr-test.yml  publish_pypi.yml  release_manual.yml
assets/: architecture.drawio
backend/: main.py
backend/artifacts/: artifact.py
backend/celery/: __init__.py  app.py
backend/config/: __init__.py
backend/crud/: artifacts.py  chats.py  users.py
backend/database/: psql.py
backend/dependencies/: artifacts.py  authentication.py  chats.py  user_management.py
backend/routers/: artifacts.py  chats.py  token.py  users.py
backend/routers/admin/: admin.py  groups.py  users.py
backend/schemas/: artifacts.py
backend/setup/: setup.py
backend/tests/: utils.py
backend/tests/routers_tests/: test_admin.py  test_artifacts.py  test_user.py
backend/utils/: authentication.py  security.py
celery_app/: worker.py
celery_app/apps/: getting_started_example.py  pandasai_prompt_app.py  sql_prompt_app.py
celery_app/config/: __init__.py
celery_app/crud/: chats.py
celery_app/database/: psql.py
celery_app/executors/: getting_started_executor.py  helpers.py  pandasai_executor.py  sql_executor.py
celery_app/prompt_interpreter/: sql_interpreter.py
data_copilot/: configure.py  main.py
data_copilot/backend/: main.py
data_copilot/backend/artifacts/: artifact.py
data_copilot/backend/celery/: __init__.py  app.py
data_copilot/backend/config/: __init__.py  config.py
data_copilot/backend/crud/: artifacts.py  chats.py  users.py
data_copilot/backend/database/: psql.py
data_copilot/backend/dependencies/: artifacts.py  authentication.py  chats.py  user_management.py
data_copilot/backend/routers/: artifacts.py  chats.py  health.py  token.py  users.py
data_copilot/backend/routers/admin/: admin.py  groups.py  users.py
data_copilot/backend/schemas/: artifacts.py  authentication.py  chats.py
data_copilot/backend/setup/: setup.py
data_copilot/backend/tests/: utils.py
data_copilot/backend/tests/routers_tests/: test_admin.py  test_artifacts.py  test_user.py
data_copilot/backend/utils/: authentication.py  security.py
data_copilot/celery_app/: worker.py
data_copilot/celery_app/apps/: getting_started_example.py  langchain_prompt_app.py  prompt_execution_app.py  sql_prompt_app.py
data_copilot/celery_app/config/: __init__.py  config.py
data_copilot/celery_app/crud/: chats.py
data_copilot/celery_app/database/: psql.py
data_copilot/celery_app/executors/: getting_started_executor.py  helpers.py  sql_executor.py
data_copilot/celery_app/prompt_interpreter/: sql_interpreter.py
data_copilot/db_migrations/: env.py
data_copilot/db_migrations/versions/: da02d508d980_0_initial_revision.py
data_copilot/db_models/: __init__.py  artifacts.py  base.py  chats.py  helpers.py  users.py
data_copilot/execution_apps/: __init__.py  base.py  helpers.py
data_copilot/execution_apps/apps/: langchain_interpreter.py  sql_interpreter.py
data_copilot/frontend/: .env.development  .env.production  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  staticwebapp.config.json  staticwebapp.config_old.json  tailwind.config.js  vite.config.ts
data_copilot/frontend/docker/: entrypoint.sh
data_copilot/frontend/src/: App.vue  main.ts
data_copilot/frontend/src/client/: api.ts  common.ts  index.ts
data_copilot/frontend/src/client_helpers/: utils.ts
data_copilot/frontend/src/components/: ModulosFooter.vue
data_copilot/frontend/src/config/: axios.ts
data_copilot/frontend/src/helpers/: globalFunctions.ts
data_copilot/frontend/src/hooks/: useBreakpoints.ts
data_copilot/frontend/src/layouts/: AuthLayout.vue  DefaultLayout.vue  ErrorLayout.vue
data_copilot/frontend/src/pages/: Chat.vue  ChatWelcomePage.vue  Home.vue  Login.vue  NotFound.vue  ServiceDown.vue  Signup.vue
data_copilot/frontend/src/router/: index.ts
data_copilot/frontend/src/stores/: artifacts.ts  auth.ts  chats.ts  messages.ts
data_copilot/storage_handler/: __init__.py  azure_client.py  base.py  functions.py  localstorage_client.py
data_copilot/storage_handler/tests/: test_azure_client.py  test_localstorage_client.py
data_copilot/tools/: create_openapi_json.py
data_copilot/tools/db_management/: cli.py  config.py  psql.py
db_migrations/: env.py
db_migrations/versions/: da02d508d980_0_initial_revision.py
db_models/: __init__.py  artifacts.py  chats.py  users.py
dockerfiles/backend/: Dockerfile  requirements.txt
dockerfiles/celery-worker/: Dockerfile  requirements.txt
dockerfiles/flower/: Dockerfile  requirements.txt
dockerfiles/frontend/: Dockerfile  Dockerfile-dev
dockerfiles/nginx/: Dockerfile  default.conf
frontend/: package.json
frontend/docker/: entrypoint.sh  nginx.conf
frontend/src/: shims-vue.d.ts
frontend/src/assets/styles/: _mixins.scss  global.scss  main.scss
frontend/src/client/: base.ts  configuration.ts
frontend/src/components/: ModulosFooter.vue
frontend/src/components/Chat/: ChatFileUpload.vue  ChatInput.vue  ChatListItem.vue  ChatMessage.vue  ChatWelcome.vue
frontend/src/components/SideBar/: SideBar.vue
frontend/src/components/databits_display/: CorrelationMatrixPlot.vue  displayCorrelationMatrix.ts  displayHistogram.ts  displayUtils.ts
frontend/src/components/icons/: IconLogout.vue  (+1 more)
frontend/src/composables/: useScrollUp.ts
frontend/src/pages/: Login.vue  Signup.vue
frontend/src/router/: index.ts
frontend/src/stores/: artifacts.ts  auth.ts  chats.ts  messages.ts  modal.ts
storage_handler/: __init__.py  azure_client.py  functions.py  localstorage_client.py
storage_handler/tests/: test_azure_client.py
tools/: create_openapi_json.py
tools/db_management/: cli.py
(+44 files in other folders)
