[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data_copilot"
description = "The data_copilot web application"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["data_copilot"]
authors = [
  {name = "Modulos AG", email = "contact@modulos.ai" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
  "aiohttp>=3.8.3, <= 3.8.6",
  "alembic>=1.10.2, <= 1.12.1",
  "bcrypt>=4.0.1, <= 4.0.1",
  "build>=0.10.0, <= 1.0.3",
  "celery>=5.2.7, <= 5.3.4",
  "click>=8.1.3, <= 8.1.7",
  "colorama>=0.4.6, <= 0.4.6",
  "email-validator>=1.3.0, <= 2.1.0",
  "fastapi-sso>=0.6.4, <= 0.7.2",
  "fastapi>=0.86.0, <= 0.104.1",
  "Flask>=2.3.2, <= 3.0.0",
  "fsspec>=2023.1.0, <= 2023.10.0",
  "langchain>= 0.0.179, <= 0.0.335",
  "numpy>=1.23.2, <= 1.26.1",
  "openai>=0.27, <= 0.28.1",
  "openpyxl>=3.1.1, <= 3.1.2",
  "pandas>=1.5.3, <= 2.1.2",
  "passlib>=1.7.4, <= 1.7.4",
  "psycopg2-binary>=2.9.5, <= 2.9.9",
  "pydantic>=2.4.2, <= 2.4.2",
  "pydantic-settings >= 2.0.2, <= 2.0.3",
  "python-dotenv>=0.21.1, <= 1.0.0",
  "python-jose>=3.3.0, <= 3.3.0",
  "python-multipart>=0.0.5, <= 0.0.6",
  "redis>=4.4.2, <= 5.0.1",
  "simplejson>=3.18.3, <= 3.19.2",
  "sqlalchemy>=2.0.4, <=2.0.22",
  "tabulate==0.9.0, <= 0.9.0",
  "uvicorn>=0.20.0, <= 0.23.2",
  "watchdog>=2.2.1, <= 3.0.0",
  "xlrd>=2.0.1, <= 2.0.1"
]

[project.optional-dependencies]
dev = [
    'black >= 23.3.0, <= 23.10.1',
    'click>=8.1.3',
    'ddt>=1.6.0',
    'pytest>=7.2.2',
    'tox>=4.4.8',
    'xlwt>=1.3.0'
]

[project.scripts]
  data-copilot = "data_copilot.main:main"

[project.urls]
"Homepage" = "https://github.com/Modulos/data_copilot/"
"Bug Reports" = "https://github.com/Modulos/data_copilot/issues"
"Source" = "https://github.com/Modulos/data_copilot/"

[tool.setuptools.packages.find]
include = ["data_copilot"]

[tool.setuptools_scm]
write_to = "data_copilot/_version.py"

[tool.pytest.ini_options]
minversion = "3.0"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
