[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data_copilot"
description = "The data_copilot web application"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["data_copilot"]
authors = [
  {name = "Modulos AG", email = "contact@modulos.ai" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
  "aiohttp>= 3.8.3, <= 3.9.1",
  "alembic>= 1.10.2, <= 1.13.1",
  "bcrypt>= 4.0.1, <= 4.1.2",
  "build>=0.10.0, <= 1.0.3",
  "celery>= 5.2.7, <= 5.3.6",
  "click>=8.1.3, <= 8.1.7",
  "colorama>=0.4.6, <= 0.4.6",
  "email-validator>= 1.3.0, <= 2.1.0.post1",
  "fastapi-sso>= 0.6.4, <= 0.10.0",
  "fastapi>= 0.86.0, <= 0.109.0",
  "Flask>= 2.3.2, <= 3.0.1",
  "fsspec>= 2023.1.0, <= 2023.12.2",
  "langchain>= 0.0.179, <= 0.1.1",
  "numpy>= 1.23.2, <= 1.26.3",
  "openai>= 0.27, <= 1.12.0",
  "openpyxl>=3.1.1, <= 3.1.2",
  "pandas>= 1.5.3, <= 2.2.0",
  "passlib>=1.7.4, <= 1.7.4",
  "psycopg2-binary>=2.9.5, <= 2.9.9",
  "pydantic>= 2.4.2, <= 2.5.3",
  "pydantic-settings >= 2.0.2, <= 2.1.0",
  "python-dotenv>=0.21.1, <= 1.0.0",
  "python-jose>=3.3.0, <= 3.3.0",
  "python-multipart>=0.0.5, <= 0.0.6",
  "redis>=4.4.2, <= 5.0.1",
  "simplejson>=3.18.3, <= 3.19.2",
  "sqlalchemy>=2.0.4, <=2.0.25",
  "tabulate==0.9.0, <= 0.9.0",
  "uvicorn>= 0.20.0, <= 0.26.0",
  "watchdog>=2.2.1, <= 3.0.0",
  "xlrd>=2.0.1, <= 2.0.1"
]

[project.optional-dependencies]
dev = [
    'black >= 23.3.0, <= 23.12.1',
    'click>=8.1.3',
    'ddt>=1.6.0',
    'pytest>=7.2.2',
    'tox>=4.4.8',
    'xlwt>=1.3.0'
]

[project.scripts]
  data-copilot = "data_copilot.main:main"

[project.urls]
"Homepage" = "https://github.com/Modulos/data_copilot/"
"Bug Reports" = "https://github.com/Modulos/data_copilot/issues"
"Source" = "https://github.com/Modulos/data_copilot/"

[tool.setuptools.packages.find]
include = ["data_copilot"]

[tool.setuptools_scm]
write_to = "data_copilot/_version.py"

[tool.pytest.ini_options]
minversion = "3.0"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
